# fundly

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
migrations/versions/: 1860471b9a7e_add_payment_status_validator.py  2abedca43040_sync_contribution_amount_decimal.py  d6228c96f8c3_change_floats_to_decimal_in_campaign_.py  e88698b5354b_add_user_email_constraint.py
src/: __init__.py  config.py  exception_handler.py
src/api/webhooks/: dependencies.py  exceptions.py  models.py  paystack.txt  webhook.py  webhook_service.py
src/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  services.py  utils.py
src/campaigns/: models.py  routes.py  schemas.py  services.py  utils.py
src/contributions/: models.py  schemas.py  services.py
src/mail/: mail.py  schemas.py  services.py  utils.py
src/templates/: base.html  verify_email.html
src/utils/: paystack.py
