[project]
name = "crowdfund-api"
version = "0.1.0"
description = "Crowdfunding API built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.1,<0.122",
  "uvicorn[standard]>=0.38.0,<0.39",
  "sqlalchemy>=2.0.44,<2.1",
  "sqlmodel>=0.0.27,<0.1",
  "asyncpg>=0.30.0,<0.31",
  "alembic>=1.17.2,<2",
  "pydantic-settings>=2.12.0,<3",
  "python-dotenv>=1.2.1,<2",
  "email-validator>=2.3.0,<3",
  "httpx>=0.28.1,<0.29",
  "aioredis>=2.0.1,<3",
  "passlib[bcrypt]>=1.7.4,<2",
  "bcrypt>=4.3.0,<5",
  "PyJWT>=2.10.1,<3",
  "fastapi-mail>=1.6.2",
  "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.2.0,<2"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
